--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,16 @@
   ]
   ,
     "compilerOptions": {
-    "target": "ES2022",
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "jsx": "react-jsx",
-    "strict": true,
-    "skipLibCheck": true,
-    "types": ["vite/client", "node"],
-    "baseUrl": "."
-  },
-  "include": ["src", "api", "vite-env.d.ts"]
+      "target": "ESNext",
+      "module": "ESNext",
+      "moduleResolution": "Bundler",
+      "strict": true,
+      "jsx": "react-jsx",
+      "skipLibCheck": true,
+      "types": ["vite/client"],
+      "baseUrl": ".",
+      "noEmit": true,
+      "allowImportingTsExtensions": true
+    },
+    "include": ["src", "api", "vite-env.d.ts"]
 }
